--- a/index.ipynb
+++ b/index.ipynb
@@ -184,7 +184,8 @@
    "outputs": [],
    "source": [
     "\"Ceo\" # 'CEO'\n",
-    "title = \"Ceo\"\n"
+    "title = \"Ceo\"\n",
+    "title.upper()"
    ]
   },
   {
